--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+scripts/.ipynb_checkpoints
+py/__pycache__
+.python-version
