--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ rand_distr = "0.4.3"
 recursive_reference = "0.3.0"
 serde = "1.0"
 serde_json = "1.0"
+clap = { version = "4.4.11", features = ["derive"] }
