--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ chess==1.10.0
 filelock==3.13.1
 fsspec==2023.10.0
 idna==3.4
+ipywidgets==8.1.1
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+matplotlib==3.8.2
 mpmath==1.3.0
 networkx==3.2.1
 numpy==1.26.2
