--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ recursive_reference = "0.3.0"
 serde = "1.0"
 serde_json = "1.0"
 clap = { version = "4.4.11", features = ["derive"] }
+backtrace-on-stack-overflow = "0.3.0"
