--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ fsspec==2023.10.0
 idna==3.4
 ipywidgets==8.1.1
 Jinja2==3.1.2
+lightning[extra]==2.1.2
 MarkupSafe==2.1.3
 matplotlib==3.8.2
 mpmath==1.3.0
@@ -26,6 +27,7 @@ nvidia-nvtx-cu12==12.1.105
 Pillow==10.1.0
 requests==2.31.0
 sympy==1.12
+tensorboard==2.6.0
 torch==2.1.1
 torchvision==0.16.1
 triton==2.1.0
