--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ serde = { version = "1.0", features = ["std", "derive"] }
 serde_json = "1.0"
 clap = { version = "4.4.11", features = ["derive"] }
 backtrace-on-stack-overflow = "0.3.0"
+cached = "0.46.1"
