--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,10 @@ path = "src/main.rs"
 name = "play"
 path = "src/play.rs"
 
+[[bin]]
+name = "debug"
+path = "src/debug.rs"
+
 [dependencies]
 pyo3 = { version = "0.20.0", features = ["auto-initialize"] }
 numpy = "0.20.0"
@@ -29,3 +33,4 @@ clap = { version = "4.4.11", features = ["derive"] }
 backtrace-on-stack-overflow = "0.3.0"
 cached = "0.46.1"
 uci = "0.1.3"
+string-builder = "0.2.0"
