--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,6 @@ backtrace-on-stack-overflow = "0.3.0"
 cached = "0.46.1"
 uci = "0.1.3"
 string-builder = "0.2.0"
+
+[profile.release]
+debug = true
