--- a/requirements.txt
+++ b/requirements.txt
@@ -21,15 +21,17 @@ nvidia-cufft-cu12==11.0.2.54
 nvidia-curand-cu12==10.3.2.106
 nvidia-cusolver-cu12==11.4.5.107
 nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.18.1
+nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.1.105
 Pillow==10.1.0
 requests==2.31.0
 sympy==1.12
 tensorboard==2.6.0
-torch==2.1.1
-torchvision==0.16.1
-triton==2.1.0
+tensorrt==8.6.1
+torch==2.2.1
+torch-tensorrt=2.2.0
+torchvision==0.17.1
+triton==2.2.0
 typing_extensions==4.8.0
 urllib3==2.1.0
