--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ cached = "0.46.1"
 uci = "0.1.3"
 string-builder = "0.2.0"
 tch = "0.14.0"
+ort = "2.0.0-alpha.4"
+tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
 
 [profile.release]
 debug = true
