--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,9 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.1.105
+onnx==1.15.0
 Pillow==10.1.0
+pytorch-quantization==2.2.1
 requests==2.31.0
 sympy==1.12
 tensorboard==2.6.0
