--- a/requirements.txt
+++ b/requirements.txt
@@ -12,26 +12,17 @@ matplotlib==3.8.2
 mpmath==1.3.0
 networkx==3.2.1
 numpy==1.26.2
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.3.101
-nvidia-nvtx-cu12==12.1.105
 onnx==1.15.0
 Pillow==10.1.0
 pytorch-quantization==2.2.1
 requests==2.31.0
 sympy==1.12
-tensorboard==2.6.0
-tensorrt==8.6.1
-torch==2.1.1
-torchvision==0.16.1
+tensorboard==2.15.1
+tensorrt==8.6.1.post1
+tensorrt-bindings==8.6.1
+tensorrt-libs==8.6.1
+torch-tensorrt==2.2.0+cu121
+torch==2.2.1+cu121
+torchvision==0.17.1+cu121
 typing_extensions==4.8.0
 urllib3==2.1.0
