compile with tensorrt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ string-builder = "0.2.0"
 tch = "0.15.0"
 ort = "2.0.0-alpha.4"
 tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
+libloading = "0.8"
 
 [profile.release]
 debug = true
