--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,2 +1,2 @@
 load_ts: load_ts.rs
-	rustc %< -L crate=../target/debug/deps/ -L dependency=../target/debug/deps -L native=../venv/lib/python3.11/site-packages/torch/lib
+	rustc $< -L crate=../target/debug/deps/ -L dependency=../target/debug/deps -L native=../venv/lib/python3.11/site-packages/torch/lib
