--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ tch = "0.15.0"
 ort = "2.0.0-alpha.4"
 tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
 libloading = "0.8"
+once_cell = "1.19.0"
 
 [profile.release]
 debug = true
