--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,26 @@
 [tool.poetry]
 package-mode = false
 
+[[tool.poetry.source]]
+name = "pytorch-rocm"
+url = "https://download.pytorch.org/whl/rocm6.2"
+priority = "explicit"
+
 [tool.poetry.dependencies]
 python = "^3.12"
-chess = "1.10.0"
-lightning = { version = "2.1.2", extras=["extra"] }
+chess = "1.11.1"
+lightning = { version = "2.5.0", extras = ["extra"] }
 matplotlib = "3.8.2"
 numpy = "1.26.2"
 onnx = "^1.15.0"
 sympy = "^1.12"
 tensorboard = "^2.15.1"
-tensorrt = "^10.0"
-torch = {url = "https://download.pytorch.org/whl/cu121/torch-2.3.1%2Bcu121-cp312-cp312-linux_x86_64.whl"}
-torchvision = {url = "https://download.pytorch.org/whl/cu121/torchvision-0.18.1%2Bcu121-cp312-cp312-linux_x86_64.whl"}
-torch-tensorrt = {url = "https://download.pytorch.org/whl/cu121/torch_tensorrt-2.3.0%2Bcu121-cp312-cp312-linux_x86_64.whl"}
+#tensorrt = "^10.0"
+torch = { version = "~2.5", source = "pytorch-rocm" }
+torchvision = { version = "~0.18", source = "pytorch-rocm" }
+pytorch-triton-rocm = { version = "~3.1.0", source = "pytorch-rocm" }
+#torch-tensorrt = { url = "https://download.pytorch.org/whl/cu121/torch_tensorrt-2.3.0%2Bcu121-cp312-cp312-linux_x86_64.whl" }
+pandas = "^2.2.3"
 
 [build-system]
 requires = ["poetry-core"]
