--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 export TORCH_BLAS_PREFER_HIPBLASLT=0
 PYTHON_VENV=$(poetry env info -p)
-export LD_LIBRARY_PATH=${PYTHON_VENV}/lib/python3.12/site-packages/torch/lib
+export LD_LIBRARY_PATH=${PYTHON_VENV}/lib/python3.12/site-packages/torch/lib:$HOME/.pyenv/versions/3.12.8/lib
 export LIBTORCH_USE_PYTORCH=1
 export LIBTORCH_BYPASS_VERSION_CHECK=1
 WORKSPACE=$(cargo metadata --format-version 1 | jq -r ".workspace_root")
