--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,14 @@ path = "src/play.rs"
 name = "debug"
 path = "src/debug.rs"
 
+[build-dependencies]
+cxx-build = "1.0"
+
 [dependencies]
+cxx = "1.0"
 pyo3 = { version = "0.23.3", features = ["auto-initialize"] }
 numpy = "0.23.0"
-ndarray = "=0.15"
+ndarray = "=0.16.1"
 rand = "0.8.5"
 rand_distr = "0.4.3"
 recursive_reference = "0.3.0"
@@ -34,13 +38,15 @@ backtrace-on-stack-overflow = "0.3.0"
 cached = "0.46.1"
 uci = "0.1.3"
 string-builder = "0.2.0"
-tch = "0.18.1"
+tch = "0.19.0"
+torch-sys = "0.19.0"
 # ort = "2.0.0-alpha.4"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 libloading = "0.8"
 once_cell = "1.19.0"
 c_str_macro = "1.0.3"
 short-uuid = "0.1.4"
+aotinductor = "0.1.2"
 
 [profile.release]
 debug = true
