--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 export TORCH_BLAS_PREFER_HIPBLASLT=0
 PYTHON_VENV=$(poetry env info -p)
-export LD_LIBRARY_PATH=${PYTHON_VENV}/lib/python3.12/site-packages/torch/lib:$HOME/.pyenv/versions/3.12.8/lib
-export LIBTORCH_USE_PYTORCH=1
-export LIBTORCH_BYPASS_VERSION_CHECK=1
+export LD_LIBRARY_PATH=$HOME/.pyenv/versions/3.12.8/lib
+export LIBTORCH=${PYTHON_VENV}/lib/python3.12/site-packages/torch
+export LIBTORCH_INCLUDE=${LIBTORCH}
 WORKSPACE=$(cargo metadata --format-version 1 | jq -r ".workspace_root")
 export PYTHONPATH=${WORKSPACE}/py:${WORKSPACE}/target/debug
