--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ path = "src/debug.rs"
 [build-dependencies]
 cxx-build = "1.0"
 pyo3-build-config = "0.23.4"
+tonic-build = "0.12.3"
 
 [dependencies]
 cxx = "1.0"
@@ -48,6 +49,11 @@ once_cell = "1.19.0"
 c_str_macro = "1.0.3"
 short-uuid = "0.1.4"
 aotinductor = "0.1.2"
+tonic = "=0.12.3"
+prost = "=0.13.2"
+prost-types = "=0.13.2"
+tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
+bytemuck = "1.22.0"
 
 [profile.release]
 debug = true
