--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,6 @@ chess = "3.2.0"
 [profile.release]
 debug = true
 
-[[bench]]
-name = "chess_bench"
-harness = false
+#[[bench]]
+#name = "chess_bench"
+#harness = false
