--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,15 @@ tonic-build = "0.12.3"
 criterion = "0.5"
 
 [dependencies]
+ort = { version = "2.0.0-rc.10", features = [
+  "ndarray",
+  "rocm",
+  "cuda",
+  "migraphx",
+  "half",
+  "load-dynamic",
+] }
+half = "2.6.0"
 cxx = "1.0"
 pyo3 = { version = "0.23.3", features = ["auto-initialize"] }
 numpy = "0.23.0"
@@ -43,15 +52,14 @@ backtrace-on-stack-overflow = "0.3.0"
 cached = "0.46.1"
 uci = "0.1.3"
 string-builder = "0.2.0"
-tch = "0.19.0"
-torch-sys = "0.19.0"
-# ort = "2.0.0-alpha.4"
+tch = "0.20.0"
+torch-sys = "0.20.0"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 libloading = "0.8"
 once_cell = "1.19.0"
 c_str_macro = "1.0.3"
 short-uuid = "0.1.4"
-aotinductor = "0.1.2"
+aotinductor = { path = "../aotinductor" }
 tonic = "=0.12.3"
 prost = "=0.13.2"
 prost-types = "=0.13.2"
