--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
+source .venv/bin/activate
 export TORCH_BLAS_PREFER_HIPBLASLT=0
+export ORT_LIB_LOCATION=/home2/jiasen/workspace/onnxruntime/build/Linux/Release
 PYTHON_VENV=$(poetry env info -p)
-export LD_LIBRARY_PATH=$HOME/.pyenv/versions/3.12.8/lib
+export LD_LIBRARY_PATH=$HOME/.pyenv/versions/3.12.8/lib:$HOME/workspace/onnxruntime/build/Linux/Release
 export LIBTORCH=${PYTHON_VENV}/lib/python3.12/site-packages/torch
 export LIBTORCH_INCLUDE=${LIBTORCH}
 WORKSPACE=$(cargo metadata --format-version 1 | jq -r ".workspace_root")
