--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,28 +2,26 @@ name: Rust
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: [self-hosted, gpu]
     steps:
-    - uses: actions/setup-python@v5.1.0
-      with:
-        python-version: 3.12
-    - uses: Gr1N/setup-poetry@v9
-    - uses: actions/checkout@v4
-    - name: Install poetry
-      run: poetry install    
-    - name: Build
-      run: poetry run -- cargo build --verbose
-      env:
-        LIBTORCH_USE_PYTORCH: 1
-        LIBTORCH_BYPASS_VERSION_CHECK: 1
+      - uses: actions/setup-python@v5.1.0
+        with:
+          python-version: 3.12
+      - uses: Gr1N/setup-poetry@v9
+      - uses: actions/checkout@v4
+      - name: Install poetry
+        run: poetry install
+      - name: Build
+        run: poetry run -- cargo build --verbose
+        env:
+          LIBTORCH_USE_PYTORCH: 1
+          LIBTORCH_BYPASS_VERSION_CHECK: 1
