--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,11 +13,11 @@ jobs:
   build:
     runs-on: [self-hosted, gpu]
     steps:
-      - uses: actions/setup-python@v5.1.0
+      - uses: actions/setup-python@v6.0.0
         with:
-          python-version: 3.12
+          python-version: "3.12"
       - uses: Gr1N/setup-poetry@v9
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - name: Install poetry
         run: poetry install
       - name: Build
