--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,12 +13,12 @@ jobs:
   build:
     runs-on: [self-hosted, gpu]
     steps:
+      - uses: actions/checkout@v5
       - uses: actions/setup-python@v6.0.0
         with:
           python-version: "3.12.0"
       - uses: Gr1N/setup-poetry@v9
-      - uses: actions/checkout@v5
-      - name: Install poetry
+      - name: Install
         run: poetry install
       - name: Build
         run: poetry run -- cargo build --verbose
