--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,11 +12,9 @@ env:
 jobs:
   build:
     runs-on: [self-hosted, gpu]
+    container: python:3.12
     steps:
       - uses: actions/checkout@v5
-      - uses: actions/setup-python@v6.0.0
-        with:
-          python-version: "3.12.0"
       - uses: Gr1N/setup-poetry@v9
       - name: Install
         run: poetry install
