--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       - uses: Gr1N/setup-poetry@v9
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Install
         run: poetry install
       - name: Build
