--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,8 +17,10 @@ jobs:
       - uses: actions/checkout@v5
       - uses: Gr1N/setup-poetry@v9
       - uses: actions-rust-lang/setup-rust-toolchain@v1
-      - name: Install
+      - name: Install python packages
         run: poetry install
+      - name: Install dependencies
+        run: apt update && apt install -y protobuf-compiler
       - name: Build
         run: poetry run -- cargo build --verbose
         env:
