--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,7 @@ libloading = "0.8"
 once_cell = "1.19.0"
 c_str_macro = "1.0.3"
 short-uuid = "0.1.4"
-#aotinductor = { path = "../aotinductor" }
+aotinductor = { path = "../aotinductor", optional = true }
 tonic = "=0.12.3"
 prost = "=0.13.2"
 prost-types = "=0.13.2"
@@ -69,6 +69,9 @@ chess = "3.2.0"
 
 [profile.release]
 debug = true
+
+[features]
+aotinductor = ["dep:aotinductor"]
 
 #[[bench]]
 #name = "chess_bench"
