--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ numpy = "1.26.2"
 onnx = "^1.15.0"
 sympy = "^1.12"
 tensorboard = "^2.15.1"
+timm = "^1.0.21"
 #torch = { version = "2.8.0.dev20250517", source = "pytorch-rocm" }
 #torchvision = { version = "0.22.0.dev20250517", source = "pytorch-rocm" }
 #pytorch-triton-rocm = { version = "3.3.0", source = "pytorch-rocm" }
